refactor: remove cross-table query methods from Repository
移除 Repository 层的跨表查询方法，改在 Service 层通过 EntityManager 实现。

- AdminRoleRepository: 移除 findByAdminId()
- AdminUserRepository: 移除 findRoleCodesByAdminId() 和 findPermissionCodesByAdminId()
- AdminPermissionService: 使用 EntityManager 直接执行跨表查询
- AdminManagementAppService: 使用 EntityManager 查询角色后再调用 Repository

这符合 DDD 原则，Repository 应该只负责单个聚合根的持久化，
跨表查询逻辑应该放在 Service 层或 Q 端。

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>